# ambiance

./: .gitignore  AGENTS.md  AX_PLAN.md  CLAUDE.md  LICENSE  NOTICE  README.md  TODO.md  install.sh  notes_on_prompt.md  paibuild  pyproject.toml
deprecated/: parse.py
deprecated/maildir/: config.py  events.yaml  inbound.py  ingest.py  outbound.py  sync.py
deprecated/tools/mail_oauth/: helper.py  package.yaml  providers.yaml
deprecated/tui/: __init__.py  app.py  widgets.py
development_docs/: OVERVIEW.md
docs/superpowers/plans/: 2026-04-28-pai-boot-and-decomposition.md  2026-07-07-cowork-notetaker-rollout.md  2026-07-07-per-pai-provider-switching.md  2026-07-20-fhs-reject-with-hint.md
docs/superpowers/specs/: 2026-04-28-pai-boot-and-src-decomposition-design.md  2026-05-19-pai-finished-notifications-design.md  2026-05-24-inline-activity-indicator-design.md  2026-06-17-getting-to-know-you-design.md  2026-07-03-cowork-window-activity-design.md  2026-07-04-notetaker-driver-design.md  2026-07-04-version-skew-foolproofing-design.md  (+5 more)
etc/: config.yaml
image/: build  mkosi.conf  mkosi.postinst
macos/: GUI_MIGRATION_TODO.md  README.md  build.sh  bundle-runtime.sh  package-dmg.sh  project.yml
macos/PAI/: AppState.swift  CapabilityCatalog.swift  DayFile.swift  EventEmitter.swift  EventsTailer.swift  FHS.swift  Info.plist  KernelLauncher.swift  KernelLog.swift  LoginItem.swift  ModelSetup.swift  Ngrok.swift  NgrokSetup.swift  NotifyWatcher.swift  PAI.entitlements  PAIApp.swift  PAICloner.swift  PAIRegistry.swift  PAIWebScheme.swift  ProcRegistry.swift  Provisioner.swift  PythonRuntime.swift  RemoteAccess.swift  RemoteWebLauncher.swift  TunnelLauncher.swift  WebServerLauncher.swift  WebWindowController.swift
macos/PAI.xcodeproj/: project.pbxproj
macos/launchd/: com.pai.kernel.plist
src/: KERNEL.md  SCAFFOLDING.md  migrate.py  pai.py  reset.py
src/agent/: __init__.py  __main__.py  config.py  image_refs.py  llm.py  loop.py  messages.py  paths.py  prompt.py  tokens.py  truncate.py  turn.py
src/boot/: __init__.py  __main__.py  _file_common.py  _shell_common.py  bash_gate.py  bash_tool.py  bootstrap.py  build.py  claude_backend.py  cmd_allowlist.py  config.py  contacts.py  debugger.py  doc_watcher.py  driver_health.py  edit_tool.py  entry.py  events.py  image_refs.py  init.py  inject.py  litellm_proxy.py  llm.py  main.py  messages.py  noop_tool.py  nudge.py  outbound_echo.py  paths.py  proc_watcher.py  processes.py  proctree.py  read_tool.py  recipient_allowlist.py  routing.py  shell_tool.py  skills.py  stitch.py  supervisor.py  timers.py  (+3 more)
src/broker/: Cargo.toml
src/drivers/: tailer.py
src/etc/: owner.md
src/etc/pai/: env  (+1 more)
src/guides/: COMPUTER_USE.md  EMAILS.md  FILESYSTEM.md  FILESYSTEM_v2.md  FILESYSTEM_v3.md  KERNEL.md  SCAFFOLDING.md
src/kernel/: __init__.py  __main__.py  bootstrap.py  config.py  events.py  llm.py  main.py  messages.py  nudge.py  proc_watcher.py  processes.py  shell_tool.py  supervisor.py  timers.py
src/prompts/: capability-escalation.md  kernel_manager.md  pai_default.md  root.md  subagent-persistent.md  subagent.md
src/sbin/: emit_event.py  install_launchd.py  migrate.py  pairelease.py  reboot.py  reset.py
src/tui/: __init__.py  app.py  state.py  widgets.py
tests/: conftest.py  test_agent_backends.py  test_agent_loop.py  test_agent_tools.py  test_bash_gate.py  test_bash_tool.py  test_boot_backfill.py  test_boot_init.py  test_boot_phases.py  test_boot_smoke.py  test_build_identity.py  test_claude_backend.py  test_compaction.py  test_config.py  test_cron_status.py  test_dashboards.py  test_debugger.py  test_doc_built_durable.py  test_driver_health_breadcrumbs.py  test_driver_lifecycle.py  test_edit_file.py  test_edit_tool.py  test_entry_stable_cwd.py  test_fhs_reject.py  test_fhs_rewrite.py  test_heartbeat.py  test_image_refs.py  test_imessage_backfill.py  test_inject.py  test_kernel_host_binaries.py  test_kernel_log.py  test_kernel_singleton.py  test_litellm_proxy.py  test_llm_provider.py  test_macmail_accounts.py  test_macmail_inbound.py  test_macmail_outbound.py  test_mailsearch.py  test_me_thread_keying.py  test_memory_usage.py  (+49 more)
tests/sbin/: test_paisetup.py
(+203 files in other folders)
