[project]
name = "pai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.40.0",
    "croniter>=6.2.2",
    "google-auth>=2.35",
    "google-auth-oauthlib>=1.2",
    "python-dotenv>=1.0",
    "pyobjc-framework-Contacts>=10.0",
    "pyyaml>=6.0.3",
    "requests>=2.32",
    "textual>=0.80",
    "watchdog>=6.0.0",
    "pytest>=8.0",
    "pytest-timeout>=2.3",
]

[project.scripts]
addcontact = "bin.addcontact:main"
addemail = "bin.addemail:main"
clear = "bin.clear:main"
compact = "bin.compact:main"
edit-file = "bin.edit_file:main"
imessage-backfill = "bin.imessage_backfill:main"
mailsearch = "bin.mailsearch:main"
init = "boot.init:main"
nudge = "bin.nudge:main"
migrate = "sbin.migrate:main"
reboot = "sbin.reboot:main"
reset = "sbin.reset:main"
tui = "sbin.tui:main"
paiadd = "bin.paiadd:main"
paicron = "bin.paicron:main"
paictl = "bin.paictl:main"
paidel = "bin.paidel:main"
paifs-init = "bin.paifs_init:main"
paiman = "bin.paiman:main"
paisetup = "sbin.paisetup:main"
pai = "bin.pai:main"
ps = "bin.ps:main"
resolve-contact = "bin.resolve_contact:main"
subagent = "bin.subagent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/boot", "src/sbin", "src/bin"]

