[project]
name = "pai"
version = "0.1.0"
description = "PAI (Personal AI) — an always-on AI fleet runtime for Linux, backed by a plain-text filesystem."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27",
    "openai>=1.0",
    "pyte>=0.8",
    "pyyaml>=6.0.3",
    "pytest>=8.0",
    "pytest-timeout>=2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]
